# pilot-hdc-queue

./: .gitignore  README.md  pyproject.toml
.github/workflows/: hdc-pipeline-consumer.yml  hdc-pipeline-producer.yml  hdc-pipeline-socketio.yml
consumer/: .env.schema  Dockerfile  README.md  config.py  connection_handler.py  consumer.py  exceptions.py  job.py  logger.py  main.py  pyproject.toml
consumer/pipelines/: bids_validate.py  copy_to_central_node.py  data_copy.py  data_delete.py  share_dataset_version.py
consumer/tests/: test_please_write_us.py
producer/: .env.schema  Dockerfile  README.md  pyproject.toml
producer/models/: singleton.py
producer/producer/: __main__.py  app.py  config.py  logger.py
producer/producer/components/: exceptions.py  schemas.py
producer/producer/components/broker/: __init__.py  publish.py  schemas.py  views.py
producer/producer/components/queue/: __init__.py  exceptions.py  models.py  publisher.py  schemas.py  views.py
producer/producer/resources/: queueConnector.py  queuePublisher.py  rabbitMq.py
producer/tests/: test_please_write_us.py
socketio/: .env.schema  Dockerfile  README.md  config.py  logger.py  message_queue.py  pyproject.toml  run.py
