[tool.poetry]
name = "service_queue_consumer"
version = "2.2.0"
description = ""
authors = ["Indoc Research"]

[tool.poetry.dependencies]
python = "^3.9"
aniso8601 = "8.0.0"
astroid = "2.4.2"
attrs = "19.3.0"
cachetools = "4.1.1"
certifi = "2020.6.20"
chardet = "3.0.4"
click = "7.1.2"
filetype = "1.0.7"
google-auth = "1.20.1"
idna = "2.10"
importlib-metadata = "1.7.0"
isort = "4.3.21"
itsdangerous = "1.1.0"
Jinja2 = "2.11.2"
jsonschema = "3.2.0"
kubernetes = "11.0.0"
lazy-object-proxy = "1.4.3"
MarkupSafe = "1.1.1"
mccabe = "0.6.1"
oauthlib = "3.1.0"
pika = "1.1.0"
pyasn1 = "0.4.8"
pyasn1-modules = "0.2.8"
PyJWT = "1.4.2"
pylint = "2.5.3"
pyrsistent = "0.16.0"
python-dateutil = "2.8.1"
pytz = "2020.1"
PyYAML = "5.3.1"
requests = "2.24.0"
requests-oauthlib = "1.3.0"
rsa = "4.6"
six = "1.12.0"
toml = "0.10.1"
typed-ast = "1.4.1"
urllib3 = "1.25.10"
websocket-client = "0.57.0"
Werkzeug = "1.0.1"
zipp = "3.1.0"
dnspython = "2.0.0"
python-dotenv = "0.19.1"
pydantic = "1.8.2"
opentelemetry-exporter-jaeger = "1.6.2"
opentelemetry-instrumentation = "0.41b0"
opentelemetry-instrumentation-pika = "0.26b1"
pilot-platform-common = "0.0.27"
python-json-logger = "^2.0.2"
aioredis = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "7.1.2"
pytest-cov = "3.0.0"

[tool.pytest.ini_options]
testpaths = "tests"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
