[tool.poetry]
name = "service_queue_producer"
version = "2.2.0"
description = ""
authors = ["Indoc Research"]

[tool.poetry.dependencies]
python = "^3.9"
filetype = "^1.0.13"
gunicorn = "^20.1.0"
flask-restx = "^0.5.1"
aniso8601 = "^9.0.1"
astroid = "^2.11.4"
attrs = "^21.4.0"
certifi = "^2021.10.8"
chardet = "^4.0.0"
click = "^8.1.3"
Flask = "2.1.0"
Flask-Cors = "^3.0.10"
Flask-Executor = "^0.10.0"
pika = "^1.2.1"
pylint = "^2.13.8"
pytz = "^2022.1"
requests = "^2.27.1"
urllib3 = "^1.26.9"
pydantic = "^1.9.0"
itsdangerous = "^2.1.2"
MarkupSafe = "^2.1.1"
python-dotenv = "0.19.1"
pilot-platform-common = "0.0.25"
python-json-logger = "^2.0.2"
Jinja2 = "3.1.2"
Werkzeug = "2.1.2"
opentelemetry-instrumentation = "0.30b1"
opentelemetry-instrumentation-flask = "0.30b1"
opentelemetry-instrumentation-pika = "0.30b1"
opentelemetry-instrumentation-requests = "0.30b1"
opentelemetry-exporter-jaeger = "^1.14.0"
uvicorn = "^0.20.0"
fastapi = "^0.88.0"
opentelemetry-instrumentation-fastapi = "0.30b1"

[tool.poetry.dev-dependencies]
pytest = "7.1.2"
pytest-cov = "3.0.0"

[tool.pytest.ini_options]
testpaths = "tests"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
