[tool.poetry]
name = "service_queue_socketio"
version = "2.2.0"
description = ""
authors = ["Indoc Research"]

[tool.poetry.dependencies]
python = "^3.8"
aio-pika = "^7.2.0"
aiohttp = "^3.8.1"
aiormq = "^6.2.3"
async-timeout = "^4.0.2"
attrs = "^21.4.0"
bidict = "^0.22.0"
certifi = "^2021.10.8"
chardet = "^4.0.0"
dnspython = "^2.2.1"
eventlet = "^0.33.0"
greenlet = "^1.1.2"
idna = "^3.3"
multidict = "^6.0.2"
pamqp = "^3.1.0"
pika = "^1.2.1"
python-engineio = "^4.3.2"
requests = "^2.31.0"
six = "^1.16.0"
typing-extensions = "^4.2.0"
yarl = "^1.7.2"
pydantic = "^1.9.0"
python-dotenv = "0.19.1"
python-json-logger = "^2.0.2"
pilot-platform-common = "^0.0.39"
pre-commit = "^2.19.0"
aioredis = "^2.0.1"
# there was some issue with version compatibility on version
# 5.7.2. if want to upgrade version please test locally
python-socketio = "5.6.0"

[tool.poetry.dev-dependencies]
pytest = "7.1.2"
pytest-cov = "3.0.0"

[tool.pytest.ini_options]
testpaths = "tests"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
